Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17975

QStateMachine postDelayedEVent and cancelDelayedEVent are not thread safe.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0
    • 4.7.1
    • Core: State Machine
    • None
    • Windows seven 64bits
      Qt 4.7.1 32bits
    • 302e6968f1152d5dee8d5debafb313bd53fa55ff

    Description

      HI.
      In documentation, postDelayedEVent and cancelDelayedEVent are thread-safe like postEvent.
      But if i call this function from a thread i have :
      postDelayedEVent : QObject::startTimer: timers cannot be started from another thread
      cancelDelayedEVent : QObject::killTimer: timers cannot be stopped from another thread

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kenthans Kent Hansen (Inactive)
            yan verdavaine
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes